[gd_scene load_steps=11 format=2]

[ext_resource path="res://graphics/cell/holders.png" type="Texture" id=1]
[ext_resource path="res://graphics/cell/glass.png" type="Texture" id=2]
[ext_resource path="res://graphics/spaceman/spaceman.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Cell.gd" type="Script" id=4]
[ext_resource path="res://graphics/fonts/andromeda-font/Andromeda-eR2n.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://graphics/fireball.png" type="Texture" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.581633, 1 )
colors = PoolColorArray( 0.320751, 0.855721, 0.873535, 1, 0.145098, 0.854902, 0.792157, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 50, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, -98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
color_ramp = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
use_filter = true
font_data = ExtResource( 5 )

[node name="Cell" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="Visual" type="Node2D" parent="."]

[node name="FloatTween" type="Tween" parent="Visual"]
repeat = true
playback/repeat = true

[node name="RotateTween" type="Tween" parent="Visual"]
repeat = true
playback/repeat = true

[node name="Particles2D" type="Particles2D" parent="Visual"]
position = Vector2( 0, 70 )
emitting = false
lifetime = 1.2
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 6 )

[node name="spaceman" type="Sprite" parent="Visual"]
rotation = -0.523598
texture = ExtResource( 3 )

[node name="Glass" type="Sprite" parent="Visual"]
position = Vector2( 0, -79 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -53, 0 )

[node name="Holders" type="Sprite" parent="Visual"]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -61, -82, 61, -82, 61, -74, 52, -70, 52, 71, 61, 74, 61, 83, -61, 83, -61, 74, -52, 70, -52, -70, -61, -74 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -245.0
margin_top = 37.0
margin_right = 245.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 4 )
text = "spaceman released"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer"]
[connection signal="tween_completed" from="Visual/FloatTween" to="." method="_on_FloatTween_tween_completed"]
[connection signal="tween_completed" from="Visual/RotateTween" to="." method="_on_RotateTween_tween_completed"]
